--- a/config
+++ b/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 5.19.10-1 Kernel Configuration
+# Linux/arm64 5.19.11-2 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="gcc (GCC) 12.1.0"
 CONFIG_CC_IS_GCC=y
@@ -1725,6 +1725,7 @@ CONFIG_NET_SWITCHDEV=y
 CONFIG_NET_L3_MASTER_DEV=y
 CONFIG_QRTR=m
 CONFIG_QRTR_TUN=m
+CONFIG_QRTR_MHI=m
 # CONFIG_NET_NCSI is not set
 CONFIG_PCPU_DEV_REFCNT=y
 CONFIG_RPS=y
@@ -2164,7 +2165,9 @@ CONFIG_SUNXI_RSB=y
 # CONFIG_TEGRA_ACONNECT is not set
 # CONFIG_TEGRA_GMI is not set
 # CONFIG_VEXPRESS_CONFIG is not set
-# CONFIG_MHI_BUS is not set
+CONFIG_MHI_BUS=m
+# CONFIG_MHI_BUS_DEBUG is not set
+# CONFIG_MHI_BUS_PCI_GENERIC is not set
 # CONFIG_MHI_BUS_EP is not set
 # end of Bus devices
 
@@ -2847,6 +2850,7 @@ CONFIG_VIRTIO_NET=m
 CONFIG_NLMON=m
 CONFIG_NET_VRF=m
 # CONFIG_VSOCKMON is not set
+# CONFIG_MHI_NET is not set
 # CONFIG_ARCNET is not set
 # CONFIG_ATM_DRIVERS is not set
 
@@ -3310,7 +3314,10 @@ CONFIG_ATH10K_DEBUGFS=y
 # CONFIG_ATH10K_DFS_CERTIFIED is not set
 CONFIG_WCN36XX=m
 CONFIG_WCN36XX_DEBUGFS=y
-# CONFIG_ATH11K is not set
+CONFIG_ATH11K=m
+CONFIG_ATH11K_PCI=m
+# CONFIG_ATH11K_DEBUG is not set
+# CONFIG_ATH11K_DEBUGFS is not set
 CONFIG_WLAN_VENDOR_ATMEL=y
 CONFIG_ATMEL=m
 CONFIG_PCI_ATMEL=m
@@ -8186,6 +8193,7 @@ CONFIG_SOC_BRCMSTB=y
 #
 # Qualcomm SoC drivers
 #
+CONFIG_QCOM_QMI_HELPERS=m
 # end of Qualcomm SoC drivers
 
 CONFIG_ROCKCHIP_GRF=y
