--- a/config
+++ b/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 6.6.0-1 Kernel Configuration
+# Linux/arm64 6.7.6-1 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="gcc (GCC) 12.1.0"
 CONFIG_CC_IS_GCC=y
@@ -15,6 +15,7 @@ CONFIG_CC_CAN_LINK=y
 CONFIG_CC_CAN_LINK_STATIC=y
 CONFIG_CC_HAS_ASM_GOTO_OUTPUT=y
 CONFIG_CC_HAS_ASM_GOTO_TIED_OUTPUT=y
+CONFIG_GCC_ASM_GOTO_OUTPUT_WORKAROUND=y
 CONFIG_CC_HAS_ASM_INLINE=y
 CONFIG_CC_HAS_NO_PROFILE_FN_ATTR=y
 CONFIG_PAHOLE_VERSION=0
@@ -334,6 +335,7 @@ CONFIG_ARCH_MESON=y
 # CONFIG_ARCH_NXP is not set
 # CONFIG_ARCH_MA35 is not set
 # CONFIG_ARCH_NPCM is not set
+# CONFIG_ARCH_PENSANDO is not set
 # CONFIG_ARCH_QCOM is not set
 # CONFIG_ARCH_REALTEK is not set
 # CONFIG_ARCH_RENESAS is not set
@@ -393,7 +395,9 @@ CONFIG_ARM64_ERRATUM_2067961=y
 CONFIG_ARM64_ERRATUM_2441009=y
 CONFIG_ARM64_ERRATUM_2457168=y
 CONFIG_ARM64_ERRATUM_2645198=y
+CONFIG_ARM64_WORKAROUND_SPECULATIVE_UNPRIV_LOAD=y
 CONFIG_ARM64_ERRATUM_2966298=y
+CONFIG_ARM64_ERRATUM_3117295=y
 CONFIG_CAVIUM_ERRATUM_22375=y
 CONFIG_CAVIUM_ERRATUM_23154=y
 CONFIG_CAVIUM_ERRATUM_27456=y
@@ -444,6 +448,7 @@ CONFIG_ARCH_SUPPORTS_KEXEC_SIG=y
 CONFIG_ARCH_SUPPORTS_KEXEC_IMAGE_VERIFY_SIG=y
 CONFIG_ARCH_DEFAULT_KEXEC_IMAGE_VERIFY_SIG=y
 CONFIG_ARCH_SUPPORTS_CRASH_DUMP=y
+CONFIG_ARCH_HAS_GENERIC_CRASHKERNEL_RESERVATION=y
 CONFIG_TRANS_TABLE=y
 # CONFIG_XEN is not set
 CONFIG_ARCH_FORCE_MAX_ORDER=10
@@ -1002,6 +1007,7 @@ CONFIG_PAGE_REPORTING=y
 CONFIG_MIGRATION=y
 CONFIG_ARCH_ENABLE_HUGEPAGE_MIGRATION=y
 CONFIG_CONTIG_ALLOC=y
+CONFIG_PCP_BATCH_SCALE_MAX=5
 CONFIG_PHYS_ADDR_T_64BIT=y
 CONFIG_MMU_NOTIFIER=y
 CONFIG_KSM=y
@@ -1140,6 +1146,8 @@ CONFIG_TCP_CONG_BBR=m
 CONFIG_DEFAULT_CUBIC=y
 # CONFIG_DEFAULT_RENO is not set
 CONFIG_DEFAULT_TCP_CONG="cubic"
+CONFIG_TCP_SIGPOOL=y
+# CONFIG_TCP_AO is not set
 CONFIG_TCP_MD5SIG=y
 CONFIG_IPV6=y
 CONFIG_IPV6_ROUTER_PREF=y
@@ -1614,9 +1622,6 @@ CONFIG_VLAN_8021Q_MVRP=y
 CONFIG_LLC=m
 # CONFIG_LLC2 is not set
 CONFIG_ATALK=m
-CONFIG_DEV_APPLETALK=m
-CONFIG_IPDDP=m
-CONFIG_IPDDP_ENCAP=y
 # CONFIG_X25 is not set
 # CONFIG_LAPB is not set
 # CONFIG_PHONET is not set
@@ -2012,6 +2017,7 @@ CONFIG_VGA_ARB=y
 CONFIG_VGA_ARB_MAX_GPUS=8
 CONFIG_HOTPLUG_PCI=y
 CONFIG_HOTPLUG_PCI_ACPI=y
+# CONFIG_HOTPLUG_PCI_ACPI_AMPERE_ALTRA is not set
 # CONFIG_HOTPLUG_PCI_ACPI_IBM is not set
 # CONFIG_HOTPLUG_PCI_CPCI is not set
 # CONFIG_HOTPLUG_PCI_SHPC is not set
@@ -2135,7 +2141,6 @@ CONFIG_GENERIC_ARCH_TOPOLOGY=y
 #
 CONFIG_ARM_CCI=y
 CONFIG_ARM_CCI400_COMMON=y
-# CONFIG_BRCMSTB_GISB_ARB is not set
 # CONFIG_MOXTET is not set
 CONFIG_SUN50I_DE2_BUS=y
 CONFIG_SUNXI_RSB=y
@@ -2172,6 +2177,7 @@ CONFIG_ARM_SCMI_TRANSPORT_SMC=y
 # CONFIG_ARM_SCMI_TRANSPORT_SMC_ATOMIC_ENABLE is not set
 # CONFIG_ARM_SCMI_TRANSPORT_VIRTIO is not set
 CONFIG_ARM_SCMI_POWER_DOMAIN=y
+CONFIG_ARM_SCMI_PERF_DOMAIN=y
 # CONFIG_ARM_SCMI_POWER_CONTROL is not set
 # end of ARM System Control and Management Interface Protocol
 
@@ -2214,6 +2220,12 @@ CONFIG_EFI_CUSTOM_SSDT_OVERLAYS=y
 CONFIG_MESON_SM=y
 CONFIG_ARM_PSCI_FW=y
 # CONFIG_ARM_PSCI_CHECKER is not set
+
+#
+# Qualcomm firmware drivers
+#
+# end of Qualcomm firmware drivers
+
 CONFIG_HAVE_ARM_SMCCC=y
 CONFIG_HAVE_ARM_SMCCC_DISCOVERY=y
 CONFIG_ARM_SMCCC_SOC_ID=y
@@ -2233,7 +2245,6 @@ CONFIG_MTD=y
 #
 # Partition parsers
 #
-# CONFIG_MTD_AR7_PARTS is not set
 # CONFIG_MTD_CMDLINE_PARTS is not set
 CONFIG_MTD_OF_PARTS=m
 # CONFIG_MTD_AFS_PARTS is not set
@@ -2410,7 +2421,7 @@ CONFIG_NVME_VERBOSE_ERRORS=y
 CONFIG_NVME_HWMON=y
 # CONFIG_NVME_FC is not set
 # CONFIG_NVME_TCP is not set
-# CONFIG_NVME_AUTH is not set
+# CONFIG_NVME_HOST_AUTH is not set
 CONFIG_NVME_APPLE=m
 # CONFIG_NVME_TARGET is not set
 # end of NVME Support
@@ -2451,7 +2462,6 @@ CONFIG_MISC_RTSX=m
 #
 CONFIG_EEPROM_AT24=m
 CONFIG_EEPROM_AT25=m
-# CONFIG_EEPROM_LEGACY is not set
 CONFIG_EEPROM_MAX6875=m
 CONFIG_EEPROM_93CX6=m
 # CONFIG_EEPROM_93XX46 is not set
@@ -2729,7 +2739,6 @@ CONFIG_MD_FAULTY=m
 CONFIG_MD_CLUSTER=m
 CONFIG_BCACHE=m
 # CONFIG_BCACHE_DEBUG is not set
-# CONFIG_BCACHE_CLOSURES_DEBUG is not set
 # CONFIG_BCACHE_ASYNC_REGISTRATION is not set
 CONFIG_BLK_DEV_DM_BUILTIN=y
 CONFIG_BLK_DEV_DM=y
@@ -2836,6 +2845,7 @@ CONFIG_TAP=m
 CONFIG_VETH=m
 CONFIG_VIRTIO_NET=m
 CONFIG_NLMON=m
+# CONFIG_NETKIT is not set
 CONFIG_NET_VRF=m
 # CONFIG_VSOCKMON is not set
 # CONFIG_MHI_NET is not set
@@ -2973,6 +2983,7 @@ CONFIG_ICE=m
 CONFIG_ICE_SWITCHDEV=y
 CONFIG_FM10K=m
 CONFIG_IGC=m
+# CONFIG_IDPF is not set
 CONFIG_JME=m
 CONFIG_NET_VENDOR_ADI=y
 # CONFIG_ADIN1110 is not set
@@ -3076,7 +3087,6 @@ CONFIG_DWMAC_SUNXI=m
 CONFIG_DWMAC_SUN8I=m
 # CONFIG_DWMAC_INTEL_PLAT is not set
 # CONFIG_DWMAC_TEGRA is not set
-# CONFIG_DWMAC_LOONGSON is not set
 # CONFIG_STMMAC_PCI is not set
 # CONFIG_NET_VENDOR_SUN is not set
 # CONFIG_NET_VENDOR_SYNOPSYS is not set
@@ -3539,6 +3549,8 @@ CONFIG_MT7921E=m
 CONFIG_MT7921S=m
 CONFIG_MT7921U=m
 # CONFIG_MT7996E is not set
+# CONFIG_MT7925E is not set
+# CONFIG_MT7925U is not set
 CONFIG_WLAN_VENDOR_MICROCHIP=y
 CONFIG_WILC1000=m
 CONFIG_WILC1000_SDIO=m
@@ -4374,6 +4386,7 @@ CONFIG_PINCTRL_MESON_G12A=y
 CONFIG_PINCTRL_MESON_A1=y
 CONFIG_PINCTRL_MESON_S4=y
 CONFIG_PINCTRL_AMLOGIC_C3=y
+CONFIG_PINCTRL_AMLOGIC_T7=y
 
 #
 # Renesas pinctrl drivers
@@ -4546,7 +4559,6 @@ CONFIG_W1_SLAVE_DS28E17=m
 # end of 1-wire Slaves
 
 CONFIG_POWER_RESET=y
-CONFIG_POWER_RESET_BRCMSTB=y
 CONFIG_POWER_RESET_GPIO=y
 CONFIG_POWER_RESET_GPIO_RESTART=y
 # CONFIG_POWER_RESET_ODROID_GO_ULTRA_POWEROFF is not set
@@ -4613,6 +4625,7 @@ CONFIG_CHARGER_CROS_PCHG=m
 # CONFIG_CHARGER_UCS1002 is not set
 # CONFIG_CHARGER_BD99954 is not set
 # CONFIG_BATTERY_UG3105 is not set
+# CONFIG_FUEL_GAUGE_MM8013 is not set
 CONFIG_HWMON=y
 CONFIG_HWMON_VID=m
 # CONFIG_HWMON_DEBUG_CHIP is not set
@@ -4666,6 +4679,7 @@ CONFIG_SENSORS_GPIO_FAN=m
 CONFIG_SENSORS_IIO_HWMON=m
 CONFIG_SENSORS_IT87=m
 # CONFIG_SENSORS_JC42 is not set
+# CONFIG_SENSORS_POWERZ is not set
 CONFIG_SENSORS_POWR1220=m
 CONFIG_SENSORS_LINEAGE=m
 CONFIG_SENSORS_LTC2945=m
@@ -4673,6 +4687,7 @@ CONFIG_SENSORS_LTC2947=m
 CONFIG_SENSORS_LTC2947_I2C=m
 CONFIG_SENSORS_LTC2947_SPI=m
 CONFIG_SENSORS_LTC2990=m
+# CONFIG_SENSORS_LTC2991 is not set
 CONFIG_SENSORS_LTC2992=m
 CONFIG_SENSORS_LTC4151=m
 CONFIG_SENSORS_LTC4215=m
@@ -5042,7 +5057,6 @@ CONFIG_MFD_SM501_GPIO=y
 # CONFIG_MFD_STMPE is not set
 CONFIG_MFD_SUN6I_PRCM=y
 CONFIG_MFD_SYSCON=y
-# CONFIG_MFD_TI_AM335X_TSCADC is not set
 # CONFIG_MFD_LP3943 is not set
 # CONFIG_MFD_LP8788 is not set
 # CONFIG_MFD_TI_LMU is not set
@@ -5120,6 +5134,7 @@ CONFIG_REGULATOR_GPIO=y
 # CONFIG_REGULATOR_LTC3676 is not set
 # CONFIG_REGULATOR_MAX14577 is not set
 # CONFIG_REGULATOR_MAX1586 is not set
+# CONFIG_REGULATOR_MAX77503 is not set
 CONFIG_REGULATOR_MAX77620=y
 # CONFIG_REGULATOR_MAX77857 is not set
 # CONFIG_REGULATOR_MAX8649 is not set
@@ -5461,6 +5476,7 @@ CONFIG_MEDIA_PCI_SUPPORT=y
 #
 # Media capture support
 #
+# CONFIG_VIDEO_MGB4 is not set
 CONFIG_VIDEO_SOLO6X10=m
 # CONFIG_VIDEO_TW5864 is not set
 CONFIG_VIDEO_TW68=m
@@ -5600,6 +5616,10 @@ CONFIG_VIDEO_MESON_GE2D=m
 #
 
 #
+# Nuvoton media platform drivers
+#
+
+#
 # NVidia media platform drivers
 #
 # CONFIG_VIDEO_TEGRA_VDE is not set
@@ -5723,6 +5743,7 @@ CONFIG_VIDEO_IMX258=m
 # CONFIG_VIDEO_IMX415 is not set
 # CONFIG_VIDEO_MT9M001 is not set
 # CONFIG_VIDEO_MT9M111 is not set
+# CONFIG_VIDEO_MT9M114 is not set
 # CONFIG_VIDEO_MT9P031 is not set
 # CONFIG_VIDEO_MT9T112 is not set
 CONFIG_VIDEO_MT9V011=m
@@ -6230,10 +6251,12 @@ CONFIG_DRM_PANEL_FEIYANG_FY07024DI26A30D=m
 # CONFIG_DRM_PANEL_ILITEK_IL9322 is not set
 # CONFIG_DRM_PANEL_ILITEK_ILI9341 is not set
 CONFIG_DRM_PANEL_ILITEK_ILI9881C=m
+# CONFIG_DRM_PANEL_ILITEK_ILI9882T is not set
 # CONFIG_DRM_PANEL_INNOLUX_EJ030NA is not set
 # CONFIG_DRM_PANEL_INNOLUX_P079ZCA is not set
 # CONFIG_DRM_PANEL_JADARD_JD9365DA_H3 is not set
 # CONFIG_DRM_PANEL_JDI_LT070ME05000 is not set
+# CONFIG_DRM_PANEL_JDI_LPM102A188A is not set
 # CONFIG_DRM_PANEL_JDI_R63452 is not set
 CONFIG_DRM_PANEL_KHADAS_TS050=m
 # CONFIG_DRM_PANEL_KINGDISPLAY_KD097D04 is not set
@@ -6261,6 +6284,7 @@ CONFIG_DRM_PANEL_KHADAS_TS050=m
 CONFIG_DRM_PANEL_RASPBERRYPI_TOUCHSCREEN=m
 # CONFIG_DRM_PANEL_RAYDIUM_RM67191 is not set
 # CONFIG_DRM_PANEL_RAYDIUM_RM68200 is not set
+# CONFIG_DRM_PANEL_RAYDIUM_RM692E5 is not set
 # CONFIG_DRM_PANEL_RONBO_RB070D30 is not set
 # CONFIG_DRM_PANEL_SAMSUNG_ATNA33XC20 is not set
 # CONFIG_DRM_PANEL_SAMSUNG_DB7430 is not set
@@ -6444,6 +6468,7 @@ CONFIG_FB_SYS_IMAGEBLIT=y
 CONFIG_FB_SYS_FOPS=y
 CONFIG_FB_DEFERRED_IO=y
 CONFIG_FB_DMAMEM_HELPERS=y
+CONFIG_FB_IOMEM_FOPS=y
 CONFIG_FB_IOMEM_HELPERS=y
 CONFIG_FB_SYSMEM_HELPERS=y
 CONFIG_FB_SYSMEM_HELPERS_DEFERRED=y
@@ -6845,6 +6870,8 @@ CONFIG_SND_SOC_ALC5632=m
 # CONFIG_SND_SOC_AW8738 is not set
 # CONFIG_SND_SOC_AW88395 is not set
 # CONFIG_SND_SOC_AW88261 is not set
+# CONFIG_SND_SOC_AW87390 is not set
+# CONFIG_SND_SOC_AW88399 is not set
 # CONFIG_SND_SOC_BD28623 is not set
 # CONFIG_SND_SOC_BT_SCO is not set
 # CONFIG_SND_SOC_CHV3_CODEC is not set
@@ -6934,6 +6961,7 @@ CONFIG_SND_SOC_RT5645=m
 CONFIG_SND_SOC_RT5677=m
 CONFIG_SND_SOC_RT5677_SPI=m
 # CONFIG_SND_SOC_RT9120 is not set
+# CONFIG_SND_SOC_RTQ9128 is not set
 CONFIG_SND_SOC_SGTL5000=m
 CONFIG_SND_SOC_SIMPLE_AMPLIFIER=m
 # CONFIG_SND_SOC_SIMPLE_MUX is not set
@@ -7196,6 +7224,7 @@ CONFIG_USB_CONN_GPIO=y
 CONFIG_USB_ARCH_HAS_HCD=y
 CONFIG_USB=y
 CONFIG_USB_PCI=y
+# CONFIG_USB_PCI_AMD is not set
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 
 #
@@ -7336,6 +7365,7 @@ CONFIG_USB_CHIPIDEA_UDC=y
 CONFIG_USB_CHIPIDEA_HOST=y
 CONFIG_USB_CHIPIDEA_PCI=y
 CONFIG_USB_CHIPIDEA_MSM=y
+CONFIG_USB_CHIPIDEA_NPCM=y
 CONFIG_USB_CHIPIDEA_IMX=y
 CONFIG_USB_CHIPIDEA_GENERIC=y
 CONFIG_USB_CHIPIDEA_TEGRA=y
@@ -7420,6 +7450,7 @@ CONFIG_USB_LCD=m
 CONFIG_USB_IDMOUSE=m
 CONFIG_USB_APPLEDISPLAY=m
 # CONFIG_APPLE_MFI_FASTCHARGE is not set
+# CONFIG_USB_LJCA is not set
 CONFIG_USB_SISUSBVGA=m
 CONFIG_USB_LD=m
 CONFIG_USB_TRANCEVIBRATOR=m
@@ -7580,6 +7611,7 @@ CONFIG_TYPEC_FUSB302=y
 # CONFIG_TYPEC_MUX_GPIO_SBU is not set
 # CONFIG_TYPEC_MUX_PI3USB30532 is not set
 # CONFIG_TYPEC_MUX_NB7VPQ904M is not set
+# CONFIG_TYPEC_MUX_PTN36502 is not set
 # end of USB Type-C Multiplexer/DeMultiplexer Switch support
 
 #
@@ -7644,8 +7676,6 @@ CONFIG_MMC_HSQ=y
 CONFIG_MMC_BCM2835=y
 CONFIG_MMC_MTK=m
 CONFIG_MMC_SDHCI_XENON=m
-# CONFIG_MMC_SDHCI_OMAP is not set
-# CONFIG_MMC_SDHCI_AM654 is not set
 CONFIG_SCSI_UFSHCD=m
 # CONFIG_SCSI_UFS_BSG is not set
 # CONFIG_SCSI_UFS_HWMON is not set
@@ -7751,6 +7781,7 @@ CONFIG_LEDS_TRIGGER_HEARTBEAT=y
 CONFIG_LEDS_TRIGGER_BACKLIGHT=y
 CONFIG_LEDS_TRIGGER_CPU=y
 CONFIG_LEDS_TRIGGER_ACTIVITY=y
+# CONFIG_LEDS_TRIGGER_GPIO is not set
 CONFIG_LEDS_TRIGGER_DEFAULT_ON=y
 
 #
@@ -8008,7 +8039,6 @@ CONFIG_VHOST_VSOCK=m
 # CONFIG_COMEDI is not set
 CONFIG_STAGING=y
 CONFIG_PRISM2_USB=m
-CONFIG_RTL8192U=m
 CONFIG_RTLLIB=m
 CONFIG_RTLLIB_CRYPTO_CCMP=m
 CONFIG_RTLLIB_CRYPTO_TKIP=m
@@ -8057,12 +8087,6 @@ CONFIG_AD9834=m
 #
 CONFIG_AD5933=m
 # end of Network Analyzer, Impedance Converters
-
-#
-# Resolver to digital converters
-#
-CONFIG_AD2S1210=m
-# end of Resolver to digital converters
 # end of IIO staging drivers
 
 # CONFIG_FB_SM750 is not set
@@ -8126,9 +8150,7 @@ CONFIG_BCM2835_VCHIQ_MMAL=m
 # CONFIG_PI433 is not set
 # CONFIG_XIL_AXIS_FIFO is not set
 # CONFIG_FIELDBUS_DEV is not set
-# CONFIG_QLGE is not set
 # CONFIG_VME_BUS is not set
-CONFIG_RTL8723CS=m
 # CONFIG_GOLDFISH is not set
 CONFIG_CHROME_PLATFORMS=y
 CONFIG_CHROMEOS_ACPI=m
@@ -8213,6 +8235,8 @@ CONFIG_COMMON_CLK_AXG_AUDIO=y
 CONFIG_COMMON_CLK_A1_PLL=y
 CONFIG_COMMON_CLK_A1_PERIPHERALS=y
 CONFIG_COMMON_CLK_G12A=y
+CONFIG_COMMON_CLK_S4_PLL=y
+CONFIG_COMMON_CLK_S4_PERIPHERALS=y
 # end of Clock support for Amlogic platforms
 
 CONFIG_COMMON_CLK_ROCKCHIP=y
@@ -8333,15 +8357,11 @@ CONFIG_VIRTIO_IOMMU=m
 CONFIG_MESON_CANVAS=m
 CONFIG_MESON_CLK_MEASURE=y
 CONFIG_MESON_GX_SOCINFO=y
-CONFIG_MESON_GX_PM_DOMAINS=y
-CONFIG_MESON_EE_PM_DOMAINS=y
-CONFIG_MESON_SECURE_PM_DOMAINS=y
 # end of Amlogic SoC drivers
 
 #
 # Apple SoC drivers
 #
-CONFIG_APPLE_PMGR_PWRSTATE=y
 CONFIG_APPLE_RTKIT=m
 CONFIG_APPLE_SART=m
 # end of Apple SoC drivers
@@ -8349,9 +8369,6 @@ CONFIG_APPLE_SART=m
 #
 # Broadcom SoC drivers
 #
-CONFIG_BCM2835_POWER=y
-CONFIG_RASPBERRYPI_POWER=y
-CONFIG_SOC_BRCMSTB=y
 # end of Broadcom SoC drivers
 
 #
@@ -8388,10 +8405,8 @@ CONFIG_QCOM_QMI_HELPERS=m
 
 CONFIG_ROCKCHIP_GRF=y
 CONFIG_ROCKCHIP_IODOMAIN=y
-CONFIG_ROCKCHIP_PM_DOMAINS=y
 CONFIG_SUNXI_MBUS=y
 CONFIG_SUNXI_SRAM=y
-# CONFIG_SUN20I_PPU is not set
 CONFIG_ARCH_TEGRA_132_SOC=y
 CONFIG_ARCH_TEGRA_210_SOC=y
 CONFIG_ARCH_TEGRA_186_SOC=y
@@ -8400,7 +8415,6 @@ CONFIG_ARCH_TEGRA_234_SOC=y
 CONFIG_SOC_TEGRA_FUSE=y
 CONFIG_SOC_TEGRA_FLOWCTRL=y
 CONFIG_SOC_TEGRA_PMC=y
-CONFIG_SOC_TEGRA_POWERGATE_BPMP=y
 CONFIG_SOC_TEGRA_CBB=y
 # CONFIG_SOC_TI is not set
 
@@ -8409,6 +8423,42 @@ CONFIG_SOC_TEGRA_CBB=y
 #
 # end of Xilinx SoC drivers
 # end of SOC (System On Chip) specific Drivers
+
+#
+# PM Domains
+#
+
+#
+# Amlogic PM Domains
+#
+CONFIG_MESON_GX_PM_DOMAINS=y
+CONFIG_MESON_EE_PM_DOMAINS=y
+CONFIG_MESON_SECURE_PM_DOMAINS=y
+# end of Amlogic PM Domains
+
+CONFIG_APPLE_PMGR_PWRSTATE=y
+
+#
+# Broadcom PM Domains
+#
+CONFIG_BCM2835_POWER=y
+CONFIG_RASPBERRYPI_POWER=y
+# end of Broadcom PM Domains
+
+#
+# i.MX PM Domains
+#
+# end of i.MX PM Domains
+
+#
+# Qualcomm PM Domains
+#
+# end of Qualcomm PM Domains
+
+CONFIG_ROCKCHIP_PM_DOMAINS=y
+# CONFIG_SUN20I_PPU is not set
+CONFIG_SOC_TEGRA_POWERGATE_BPMP=y
+# end of PM Domains
 
 CONFIG_PM_DEVFREQ=y
 
@@ -8558,6 +8608,7 @@ CONFIG_ENVELOPE_DETECTOR=m
 CONFIG_HI8435=m
 CONFIG_HX711=m
 CONFIG_INA2XX_ADC=m
+# CONFIG_LTC2309 is not set
 CONFIG_LTC2471=m
 CONFIG_LTC2485=m
 # CONFIG_LTC2496 is not set
@@ -8572,6 +8623,7 @@ CONFIG_MAX1363=m
 CONFIG_MAX9611=m
 CONFIG_MCP320X=m
 CONFIG_MCP3422=m
+# CONFIG_MCP3564 is not set
 CONFIG_MCP3911=m
 CONFIG_MESON_SARADC=m
 # CONFIG_MP2629_ADC is not set
@@ -8988,6 +9040,7 @@ CONFIG_LMP91000=m
 # Pressure sensors
 #
 CONFIG_ABP060MG=m
+# CONFIG_ROHM_BM1390 is not set
 CONFIG_BMP280=m
 CONFIG_BMP280_I2C=m
 CONFIG_BMP280_SPI=m
@@ -9047,6 +9100,7 @@ CONFIG_VL53L0X_I2C=m
 #
 CONFIG_AD2S90=m
 CONFIG_AD2S1200=m
+CONFIG_AD2S1210=m
 # end of Resolver to digital converters
 
 #
@@ -9267,6 +9321,7 @@ CONFIG_INTERCONNECT=y
 # CONFIG_PECI is not set
 # CONFIG_HTE is not set
 # CONFIG_CDX_BUS is not set
+CONFIG_DPLL=y
 # end of Device Drivers
 
 #
@@ -9317,7 +9372,6 @@ CONFIG_OCFS2_FS_USERSPACE_CLUSTER=m
 # CONFIG_OCFS2_DEBUG_FS is not set
 CONFIG_BTRFS_FS=m
 CONFIG_BTRFS_FS_POSIX_ACL=y
-# CONFIG_BTRFS_FS_CHECK_INTEGRITY is not set
 # CONFIG_BTRFS_FS_RUN_SANITY_TESTS is not set
 # CONFIG_BTRFS_DEBUG is not set
 # CONFIG_BTRFS_ASSERT is not set
@@ -9337,6 +9391,7 @@ CONFIG_F2FS_FS_LZ4HC=y
 CONFIG_F2FS_FS_ZSTD=y
 CONFIG_F2FS_IOSTAT=y
 # CONFIG_F2FS_UNFAIR_RWSEM is not set
+# CONFIG_BCACHEFS_FS is not set
 CONFIG_ZONEFS_FS=m
 CONFIG_FS_POSIX_ACL=y
 CONFIG_EXPORTFS=y
@@ -9882,7 +9937,9 @@ CONFIG_CRYPTO_DRBG_HASH=y
 CONFIG_CRYPTO_DRBG_CTR=y
 CONFIG_CRYPTO_DRBG=y
 CONFIG_CRYPTO_JITTERENTROPY=y
-# CONFIG_CRYPTO_JITTERENTROPY_TESTINTERFACE is not set
+CONFIG_CRYPTO_JITTERENTROPY_MEMORY_BLOCKS=64
+CONFIG_CRYPTO_JITTERENTROPY_MEMORY_BLOCKSIZE=32
+CONFIG_CRYPTO_JITTERENTROPY_OSR=1
 # end of Random number generation
 
 #
@@ -10062,7 +10119,6 @@ CONFIG_ZSTD_DECOMPRESS=y
 CONFIG_XZ_DEC=y
 # CONFIG_XZ_DEC_X86 is not set
 # CONFIG_XZ_DEC_POWERPC is not set
-# CONFIG_XZ_DEC_IA64 is not set
 CONFIG_XZ_DEC_ARM=y
 CONFIG_XZ_DEC_ARMTHUMB=y
 # CONFIG_XZ_DEC_SPARC is not set
@@ -10089,6 +10145,7 @@ CONFIG_BTREE=y
 CONFIG_INTERVAL_TREE=y
 CONFIG_XARRAY_MULTI=y
 CONFIG_ASSOCIATIVE_ARRAY=y
+CONFIG_CLOSURES=y
 CONFIG_HAS_IOMEM=y
 CONFIG_HAS_IOPORT=y
 CONFIG_HAS_IOPORT_MAP=y
@@ -10151,12 +10208,14 @@ CONFIG_SG_POOL=y
 CONFIG_ARCH_STACKWALK=y
 CONFIG_STACKDEPOT=y
 CONFIG_SBITMAP=y
+# CONFIG_LWQ_TEST is not set
 # end of Library routines
 
 CONFIG_GENERIC_IOREMAP=y
 CONFIG_GENERIC_LIB_DEVMEM_IS_ALLOWED=y
 CONFIG_PLDMFW=y
 CONFIG_ASN1_ENCODER=m
+CONFIG_FIRMWARE_TABLE=y
 
 #
 # Kernel hacking
@@ -10344,10 +10403,9 @@ CONFIG_DEBUG_LIST=y
 # CONFIG_DEBUG_PLIST is not set
 # CONFIG_DEBUG_SG is not set
 # CONFIG_DEBUG_NOTIFIERS is not set
+# CONFIG_DEBUG_CLOSURES is not set
 # CONFIG_DEBUG_MAPLE_TREE is not set
 # end of Debug kernel data structures
-
-# CONFIG_DEBUG_CREDENTIALS is not set
 
 #
 # RCU Debugging
