--- a/config
+++ b/config
@@ -1,21 +1,20 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 6.9.3-1 Kernel Configuration
+# Linux/arm64 6.9.4-1 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="gcc (GCC) 12.1.0"
+CONFIG_CC_VERSION_TEXT="aarch64-unknown-linux-gnu-gcc (GCC) 14.1.1 20240507"
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=120100
+CONFIG_GCC_VERSION=140101
 CONFIG_CLANG_VERSION=0
 CONFIG_AS_IS_GNU=y
-CONFIG_AS_VERSION=23800
+CONFIG_AS_VERSION=24200
 CONFIG_LD_IS_BFD=y
-CONFIG_LD_VERSION=23800
+CONFIG_LD_VERSION=24200
 CONFIG_LLD_VERSION=0
 CONFIG_CC_CAN_LINK=y
 CONFIG_CC_CAN_LINK_STATIC=y
 CONFIG_CC_HAS_ASM_GOTO_OUTPUT=y
 CONFIG_CC_HAS_ASM_GOTO_TIED_OUTPUT=y
-CONFIG_GCC_ASM_GOTO_OUTPUT_WORKAROUND=y
 CONFIG_CC_HAS_ASM_INLINE=y
 CONFIG_CC_HAS_NO_PROFILE_FN_ATTR=y
 CONFIG_PAHOLE_VERSION=0
@@ -833,6 +832,8 @@ CONFIG_GCC_PLUGINS=y
 # CONFIG_GCC_PLUGIN_LATENT_ENTROPY is not set
 CONFIG_FUNCTION_ALIGNMENT_4B=y
 CONFIG_FUNCTION_ALIGNMENT=4
+CONFIG_CC_HAS_MIN_FUNCTION_ALIGNMENT=y
+CONFIG_CC_HAS_SANE_FUNCTION_ALIGNMENT=y
 # end of General architecture-dependent options
 
 CONFIG_RT_MUTEXES=y
@@ -3672,16 +3673,6 @@ CONFIG_WLAN_VENDOR_QUANTENNA=y
 CONFIG_QTNFMAC=m
 CONFIG_QTNFMAC_PCIE=m
 # CONFIG_SPARD_WLAN_SUPPORT is not set
-CONFIG_SC23XX=n
-CONFIG_WCN_BSP_DRIVER_BUILDIN=n
-CONFIG_RK_WIFI_DEVICE_UWE5621/n
-CONFIG_RK_WIFI_DEVICE_UWE5622=n
-CONFIG_WLAN_UWE5621=n
-CONFIG_WLAN_UWE5622=m
-CONFIG_SPRDWL_NG=m
-CONFIG_UNISOC_WIFI_PS=y
-CONFIG_TTY_OVERY_SDIO=m
-CONFIG_USB_NET_RNDIS_WLAN=m
 CONFIG_MAC80211_HWSIM=m
 CONFIG_VIRT_WIFI=m
 # CONFIG_WAN is not set
@@ -3695,7 +3686,6 @@ CONFIG_IEEE802154_ATUSB=m
 # CONFIG_IEEE802154_CA8210 is not set
 # CONFIG_IEEE802154_MCR20A is not set
 CONFIG_IEEE802154_HWSIM=m
-
 
 #
 # Wireless WAN
@@ -4388,7 +4378,7 @@ CONFIG_PINCTRL_ROCKCHIP=y
 CONFIG_PINCTRL_SINGLE=y
 # CONFIG_PINCTRL_STMFX is not set
 # CONFIG_PINCTRL_SX150X is not set
-# CONFIG_PINCTRL_RP1 is not set
+CONFIG_PINCTRL_RP1=y
 CONFIG_PINCTRL_BCM2712=y
 CONFIG_PINCTRL_BCM2835=y
 CONFIG_PINCTRL_MESON=y
@@ -4879,6 +4869,7 @@ CONFIG_SENSORS_W83L786NG=m
 CONFIG_SENSORS_W83627HF=m
 CONFIG_SENSORS_W83627EHF=m
 # CONFIG_SENSORS_XGENE is not set
+CONFIG_SENSORS_RP1_ADC=m
 
 #
 # ACPI drivers
@@ -5132,7 +5123,7 @@ CONFIG_MFD_KHADAS_MCU=m
 # CONFIG_MFD_QCOM_PM8008 is not set
 # CONFIG_RAVE_SP_CORE is not set
 # CONFIG_MFD_INTEL_M10_BMC_SPI is not set
-# CONFIG_MFD_RP1 is not set
+CONFIG_MFD_RP1=y
 # CONFIG_MFD_RSMU_I2C is not set
 # CONFIG_MFD_RSMU_SPI is not set
 # end of Multifunction device drivers
@@ -6217,6 +6208,8 @@ CONFIG_DRM_DISPLAY_HDMI_HELPER=y
 CONFIG_DRM_DP_AUX_CHARDEV=y
 # CONFIG_DRM_DP_CEC is not set
 CONFIG_DRM_TTM=m
+CONFIG_DRM_EXEC=m
+CONFIG_DRM_GPUVM=m
 CONFIG_DRM_VRAM_HELPER=m
 CONFIG_DRM_TTM_HELPER=m
 CONFIG_DRM_GEM_DMA_HELPER=m
@@ -6858,6 +6851,11 @@ CONFIG_SND_SUN4I_SPDIF=m
 CONFIG_SND_SUN50I_DMIC=m
 CONFIG_SND_SUN8I_ADDA_PR_REGMAP=m
 # end of Allwinner SoC Audio support
+
+CONFIG_SND_SOC_SUNXI_MACH=m
+CONFIG_SND_SOC_SUNXI_AHUB_DAM=m
+CONFIG_SND_SOC_SUNXI_INTERNALCODEC=m
+CONFIG_SND_SOC_SUNXI_SUN50IW9_CODEC=m
 
 #
 # Allwinner SoC Audio support V2
@@ -8171,7 +8169,7 @@ CONFIG_VIDEO_ROCKCHIP_VDEC=m
 #
 # StarFive media platform drivers
 #
-# CONFIG_VIDEO_RPIVID is not set
+CONFIG_VIDEO_RPIVID=m
 CONFIG_VIDEO_SUNXI=y
 CONFIG_VIDEO_SUNXI_CEDRUS=m
 # CONFIG_VIDEO_SUN6I_ISP is not set
@@ -8218,7 +8216,7 @@ CONFIG_VCHIQ_CDEV=y
 CONFIG_SND_BCM2835=m
 CONFIG_VIDEO_BCM2835=m
 CONFIG_BCM_VC_SM_CMA=m
-# CONFIG_VIDEO_CODEC_BCM2835 is not set
+CONFIG_VIDEO_CODEC_BCM2835=m
 CONFIG_BCM2835_VCHIQ_MMAL=m
 # CONFIG_PI433 is not set
 # CONFIG_XIL_AXIS_FIFO is not set
@@ -8264,7 +8262,8 @@ CONFIG_COMMON_CLK_APPLE_NCO=y
 # CONFIG_COMMON_CLK_MAX77686 is not set
 # CONFIG_COMMON_CLK_MAX9485 is not set
 CONFIG_COMMON_CLK_RK808=y
-# CONFIG_COMMON_CLK_RP1 is not set
+CONFIG_COMMON_CLK_RP1=y
+CONFIG_COMMON_CLK_RP1_SDIO=y
 CONFIG_COMMON_CLK_SCMI=y
 CONFIG_COMMON_CLK_SCPI=y
 # CONFIG_COMMON_CLK_SI5341 is not set
@@ -9231,7 +9230,7 @@ CONFIG_PWM_CROS_EC=m
 CONFIG_PWM_MESON=m
 # CONFIG_PWM_PCA9685 is not set
 CONFIG_PWM_RASPBERRYPI_POE=m
-# CONFIG_PWM_RP1 is not set
+CONFIG_PWM_RP1=y
 CONFIG_PWM_ROCKCHIP=y
 CONFIG_PWM_SUN4I=m
 # CONFIG_PWM_TEGRA is not set
@@ -9249,7 +9248,7 @@ CONFIG_ARM_GIC_V3=y
 CONFIG_ARM_GIC_V3_ITS=y
 CONFIG_ARM_GIC_V3_ITS_PCI=y
 # CONFIG_AL_FIC is not set
-# CONFIG_BCM2712_MIP is not set
+CONFIG_BCM2712_MIP=y
 CONFIG_BRCMSTB_L2_IRQ=y
 CONFIG_SUN6I_R_INTC=y
 CONFIG_SUNXI_NMI_INTC=y
