h616: fix patches for opi-zero3; doesn't work BT, CPUFREQ, iommu

--- a/config
+++ b/config
@@ -626,7 +626,7 @@ CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 #
 CONFIG_CPUFREQ_DT=y
 CONFIG_CPUFREQ_DT_PLATDEV=y
-CONFIG_ARM_ALLWINNER_SUN50I_CPUFREQ_NVMEM=m
+CONFIG_ARM_ALLWINNER_SUN50I_CPUFREQ_NVMEM=y
 CONFIG_ARM_APPLE_SOC_CPUFREQ=y
 CONFIG_ARM_SCPI_CPUFREQ=y
 CONFIG_ARM_RASPBERRYPI_CPUFREQ=m
@@ -3687,7 +3687,24 @@ CONFIG_ZD1211RW_DEBUG=y
 CONFIG_WLAN_VENDOR_QUANTENNA=y
 CONFIG_QTNFMAC=m
 CONFIG_QTNFMAC_PCIE=m
-# CONFIG_SPARD_WLAN_SUPPORT is not set
+CONFIG_SPARD_WLAN_SUPPORT=y
+
+#
+# UNISOC WCN Device Drivers(for new chip...)
+#
+# CONFIG_SC23XX is not set
+# CONFIG_WCN_BSP_DRIVER_BUILDIN is not set
+# CONFIG_RK_WIFI_DEVICE_UWE5621 is not set
+# CONFIG_RK_WIFI_DEVICE_UWE5622 is not set
+CONFIG_AW_WIFI_DEVICE_UWE5622=y
+CONFIG_AW_BIND_VERIFY=y
+# end of UNISOC WCN Device Drivers(for new chip...)
+
+# CONFIG_WLAN_UWE5621 is not set
+CONFIG_WLAN_UWE5622=m
+CONFIG_SPRDWL_NG=m
+CONFIG_UNISOC_WIFI_PS=y
+# CONFIG_TTY_OVERY_SDIO is not set
 CONFIG_MAC80211_HWSIM=m
 CONFIG_VIRT_WIFI=m
 # CONFIG_WAN is not set
@@ -4235,7 +4252,7 @@ CONFIG_I2C_GPIO=m
 # CONFIG_I2C_GPIO_FAULT_INJECTOR is not set
 # CONFIG_I2C_HISI is not set
 CONFIG_I2C_MESON=y
-CONFIG_I2C_MV64XXX=m
+CONFIG_I2C_MV64XXX=y
 # CONFIG_I2C_NOMADIK is not set
 # CONFIG_I2C_OCORES is not set
 CONFIG_I2C_APPLE=m
@@ -9456,7 +9473,7 @@ CONFIG_NVMEM_BCM_OCOTP=y
 CONFIG_NVMEM_RMEM=m
 # CONFIG_NVMEM_ROCKCHIP_EFUSE is not set
 # CONFIG_NVMEM_ROCKCHIP_OTP is not set
-CONFIG_NVMEM_SUNXI_SID=m
+CONFIG_NVMEM_SUNXI_SID=y
 # CONFIG_NVMEM_U_BOOT_ENV is not set
 
 #
