--- a/config
+++ b/config
@@ -3704,7 +3704,7 @@ CONFIG_AW_BIND_VERIFY=y
 CONFIG_WLAN_UWE5622=m
 CONFIG_SPRDWL_NG=m
 CONFIG_UNISOC_WIFI_PS=y
-# CONFIG_TTY_OVERY_SDIO is not set
+CONFIG_TTY_OVERY_SDIO=m
 CONFIG_MAC80211_HWSIM=m
 CONFIG_VIRT_WIFI=m
 # CONFIG_WAN is not set
@@ -8456,7 +8456,7 @@ CONFIG_OF_IOMMU=y
 CONFIG_IOMMU_DMA=y
 # CONFIG_IOMMUFD is not set
 CONFIG_ROCKCHIP_IOMMU=y
-# CONFIG_SUN50I_IOMMU is not set
+CONFIG_SUN50I_IOMMU=y
 CONFIG_TEGRA_IOMMU_SMMU=y
 CONFIG_APPLE_DART=y
 CONFIG_ARM_SMMU=y
