--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -123,7 +123,7 @@ jobs:
           ls -lasih /var/cache/manjaro-arm-tools/pkg
           
           mkdir -p ./artifacts
-          find /var/cache/manjaro-arm-tools/pkg/ -type f -name '*.tar.xz' -exec cp '{}' ./artifacts/ ';'
+          find /var/cache/manjaro-arm-tools/pkg/ -type f -name '*.pkg.tar.*' -exec cp '{}' ./artifacts/ ';'
       -
         name: Release assets
         uses: softprops/action-gh-release@v2
@@ -135,4 +135,4 @@ jobs:
           draft: false
           prerelease: false
           files: |
-            ./artifacts/*.tar.xz
+            ./artifacts/*.pkg.tar.*
