--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
         id: makepkg
         uses: edlanglois/pkgbuild-action@v1
         with:
-          makepkgArgs: -s --config "/github/workspace/makepkg-arm.conf"
+          makepkgArgs: -s --config "$GITHUB_WORKSPACE/makepkg-arm.conf"
       - 
         name: Print Package Files
         run: |
