Add ln8000 charger driver

--- a/config
+++ b/config
@@ -4584,7 +4584,7 @@ CONFIG_DRM_PANEL_SIMPLE=m
 
 CONFIG_DRM_BRIDGE=y
 CONFIG_DRM_PANEL_BRIDGE=y
-CONFIG_DRM_AUX_BRIDGE=m
+CONFIG_DRM_AUX_BRIDGE=y
 CONFIG_DRM_AUX_HPD_BRIDGE=y
 
 #
@@ -7198,12 +7198,12 @@ CONFIG_IRQ_MSI_LIB=y
 CONFIG_PARTITION_PERCPU=y
 CONFIG_QCOM_IRQ_COMBINER=y
 CONFIG_QCOM_PDC=y
-CONFIG_QCOM_MPM=m
+CONFIG_QCOM_MPM=y
 # end of IRQ chip support
 
 # CONFIG_IPACK_BUS is not set
 CONFIG_RESET_CONTROLLER=y
-# CONFIG_RESET_GPIO is not set
+CONFIG_RESET_GPIO=m
 CONFIG_RESET_QCOM_AOSS=y
 CONFIG_RESET_QCOM_PDC=m
 CONFIG_RESET_SCMI=y
@@ -7240,8 +7240,8 @@ CONFIG_PHY_QCOM_EDP=m
 # CONFIG_PHY_QCOM_IPQ806X_SATA is not set
 CONFIG_PHY_QCOM_PCIE2=m
 CONFIG_PHY_QCOM_QMP=y
-CONFIG_PHY_QCOM_QMP_COMBO=m
-CONFIG_PHY_QCOM_QMP_PCIE=m
+CONFIG_PHY_QCOM_QMP_COMBO=y
+CONFIG_PHY_QCOM_QMP_PCIE=y
 CONFIG_PHY_QCOM_QMP_PCIE_8996=m
 CONFIG_PHY_QCOM_QMP_UFS=y
 CONFIG_PHY_QCOM_QMP_USB=m
@@ -7250,7 +7250,7 @@ CONFIG_PHY_QCOM_QUSB2=y
 CONFIG_PHY_QCOM_SNPS_EUSB2=m
 CONFIG_PHY_QCOM_EUSB2_REPEATER=m
 # CONFIG_PHY_QCOM_M31_USB is not set
-CONFIG_PHY_QCOM_USB_HS=m
+CONFIG_PHY_QCOM_USB_HS=y
 CONFIG_PHY_QCOM_USB_SNPS_FEMTO_V2=y
 # CONFIG_PHY_QCOM_USB_HSIC is not set
 CONFIG_PHY_QCOM_USB_HS_28NM=m
