Add ln8000 charger driver

--- a/config
+++ b/config
@@ -1118,8 +1118,9 @@ CONFIG_TCP_CONG_HTCP=m
 CONFIG_DEFAULT_WESTWOOD=y
 # CONFIG_DEFAULT_RENO is not set
 CONFIG_DEFAULT_TCP_CONG="westwood"
+# CONFIG_TCP_AO is not set
 # CONFIG_TCP_MD5SIG is not set
-CONFIG_IPV6=m
+CONFIG_IPV6=y
 # CONFIG_IPV6_ROUTER_PREF is not set
 # CONFIG_IPV6_OPTIMISTIC_DAD is not set
 # CONFIG_INET6_AH is not set
@@ -1211,7 +1212,7 @@ CONFIG_NFT_FIB=m
 # CONFIG_NFT_TPROXY is not set
 # CONFIG_NFT_SYNPROXY is not set
 # CONFIG_NF_FLOW_TABLE is not set
-CONFIG_NETFILTER_XTABLES=m
+CONFIG_NETFILTER_XTABLES=y
 # CONFIG_NETFILTER_XTABLES_COMPAT is not set
 
 #
@@ -1243,7 +1244,7 @@ CONFIG_NETFILTER_XT_TARGET_REDIRECT=m
 CONFIG_NETFILTER_XT_TARGET_MASQUERADE=m
 # CONFIG_NETFILTER_XT_TARGET_TEE is not set
 # CONFIG_NETFILTER_XT_TARGET_TPROXY is not set
-CONFIG_NETFILTER_XT_TARGET_TCPMSS=m
+CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
 # CONFIG_NETFILTER_XT_TARGET_TCPOPTSTRIP is not set
 
 #
@@ -1291,7 +1292,7 @@ CONFIG_NETFILTER_XT_MATCH_IPVS=m
 # CONFIG_NETFILTER_XT_MATCH_STATE is not set
 # CONFIG_NETFILTER_XT_MATCH_STATISTIC is not set
 # CONFIG_NETFILTER_XT_MATCH_STRING is not set
-CONFIG_NETFILTER_XT_MATCH_TCPMSS=m
+CONFIG_NETFILTER_XT_MATCH_TCPMSS=y
 # CONFIG_NETFILTER_XT_MATCH_TIME is not set
 # CONFIG_NETFILTER_XT_MATCH_U32 is not set
 # end of Core Netfilter Configuration
@@ -4584,7 +4585,7 @@ CONFIG_DRM_PANEL_SIMPLE=m
 
 CONFIG_DRM_BRIDGE=y
 CONFIG_DRM_PANEL_BRIDGE=y
-CONFIG_DRM_AUX_BRIDGE=m
+CONFIG_DRM_AUX_BRIDGE=y
 CONFIG_DRM_AUX_HPD_BRIDGE=y
 
 #
@@ -7198,12 +7199,12 @@ CONFIG_IRQ_MSI_LIB=y
 CONFIG_PARTITION_PERCPU=y
 CONFIG_QCOM_IRQ_COMBINER=y
 CONFIG_QCOM_PDC=y
-CONFIG_QCOM_MPM=m
+CONFIG_QCOM_MPM=y
 # end of IRQ chip support
 
 # CONFIG_IPACK_BUS is not set
 CONFIG_RESET_CONTROLLER=y
-# CONFIG_RESET_GPIO is not set
+CONFIG_RESET_GPIO=m
 CONFIG_RESET_QCOM_AOSS=y
 CONFIG_RESET_QCOM_PDC=m
 CONFIG_RESET_SCMI=y
@@ -7240,8 +7241,8 @@ CONFIG_PHY_QCOM_EDP=m
 # CONFIG_PHY_QCOM_IPQ806X_SATA is not set
 CONFIG_PHY_QCOM_PCIE2=m
 CONFIG_PHY_QCOM_QMP=y
-CONFIG_PHY_QCOM_QMP_COMBO=m
-CONFIG_PHY_QCOM_QMP_PCIE=m
+CONFIG_PHY_QCOM_QMP_COMBO=y
+CONFIG_PHY_QCOM_QMP_PCIE=y
 CONFIG_PHY_QCOM_QMP_PCIE_8996=m
 CONFIG_PHY_QCOM_QMP_UFS=y
 CONFIG_PHY_QCOM_QMP_USB=m
@@ -7250,7 +7251,7 @@ CONFIG_PHY_QCOM_QUSB2=y
 CONFIG_PHY_QCOM_SNPS_EUSB2=m
 CONFIG_PHY_QCOM_EUSB2_REPEATER=m
 # CONFIG_PHY_QCOM_M31_USB is not set
-CONFIG_PHY_QCOM_USB_HS=m
+CONFIG_PHY_QCOM_USB_HS=y
 CONFIG_PHY_QCOM_USB_SNPS_FEMTO_V2=y
 # CONFIG_PHY_QCOM_USB_HSIC is not set
 CONFIG_PHY_QCOM_USB_HS_28NM=m
