Sign UKI for SecureBoot

--- a/uki.conf
+++ b/uki.conf
@@ -2,3 +2,5 @@
 Cmdline=@/etc/kernel/cmdline
 DeviceTree=/boot/dtb-%KERNVER%
 Uname=%KERNVER%
+SecureBootPrivateKey=/etc/kernel/secure-boot-key.pem
+SecureBootCertificate=/etc/kernel/secure-boot-certificate.pem
